--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -43,5 +44,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="tsparticles.min.js"></script>
+    <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
   </body>
 </html>
